add all changes

--- a/login.html
+++ b/login.html
@@ -2,7 +2,8 @@
     <head>
         <title>My Diary Sign In</title>
     </head>
-    <body>
+    <body bgcolor='baby blue'>
+            <img class="image-logo" src="image/logo.png" alt="my logo">
         <h1>SIGN IN</h1>
         <P>
             <label for -'username'
