--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
         <title>My Diary</title>
         <link rel='stylesheet' href="style.css"
     </head>
-    <body>
+    <body bgcolor='taquis'>
+        <img class="image-logo" src="image/logo.png" alt="my logo">
         <h1>SIGN UP</h1>
         <p>
             <label for -'first name'
