--- a/login.html
+++ b/login.html
@@ -1,9 +1,14 @@
 <html>
     <head>
         <title>My Diary Sign In</title>
+        <style>
+            body {
+    background-image: url(image/logo.png);
+    background-size: 100%;
+            }
+            </style>
     </head>
-    <body bgcolor='baby blue'>
-            <img class="image-logo" src="image/logo.png" alt="my logo">
+    <body>
         <h1>SIGN IN</h1>
         <P>
             <label for -'username'
