--- a/index.html
+++ b/index.html
@@ -1,55 +1,59 @@
 <html>
     <head>
         <title>My Diary</title>
-        <link rel='stylesheet' href="style.css"
+        <link rel='stylesheet' href="style.css"/>
     </head>
-    <body bgcolor='taquis'>
+    <body style="bgcolor:green">
             <img class="image-logo" src="image/logo.png" alt="my logo">
         <h1>SIGN UP</h1>
+        <form action="login.html">
         <p>
-            <label for -'first name'
+            <label for="first name">
             First Name
         </label>
         <input type="text" placeholder="First Name">
         </p>
         <p>
-            <label for -'last name'
+            <label for="last name">
             Last Name
         </label>
         <input type="text" placeholder="Last Name">
         </p>
         <p>
-            <label for -'username'
+            <label for="username">
             Username
         </label>
         <input type="text" placeholder="Username">
         </p>
         <p>
-            <label for -'contact'
+            <label for="contact">
             Contact
         </label>
         <input type="tel" placeholder="Telephone Number">
         </p>
         <p>
-            <label for -'email'
+            <label for="email">
             Email
         </label>
         <input type="email" placeholder="Email">
         </p>
         <p>
-            <label for -'password'
-            Create Password
+            <label for="password">
+                Create Password
         </label>
         <input type="password" placeholder="Create Password">
         </p>
         <p>
-            <label for -'password'
+            <label for="password">
             Confirm Password
         </label>
         <input type="password" placeholder="Confirm Password">
         </p>
         <p>
-            <input type="submit" placeholder="Sign Up">
+           <button type="submit">SIGN UP</button>
+        </p>
+    </form>
+        <p class='message'>Already Registered? <a href='#'>Login</a>
         </p>
     </body>
 </html>
