--- a/login.html
+++ b/login.html
@@ -4,32 +4,39 @@
         <style>
             body {
     background-image: url(image/logo.png);
-    background-size: 100%;
+    height: 100vh;
+    background-size: cover;
+    background-position: center;
             }
             </style>
     </head>
     <body>
         <h1>SIGN IN</h1>
-        <P>
-            <label for -'username'
+        <form action="my diary.html">
+        <p>
+            <label for="username">
             Username
         </label>
         <input type="text" placeholder="Usernme">
         </P>
         <p>
-            <label for -'email'
+            <label for="email">
             Email
         </label>
         <input type="email" placeholder="Email">
         </p>
         <p>
-            <label for -'password'
+            <label for="password">
             Password
         </label>
         <input type="password" placeholder="Password">
         </p>
         <p>
-            <input type="sign in" placeholder="Sign In">
+            <button>SIGN IN</button>
         </p>
+    </form>
+    <form action='index.html'>
+        <p class='message'>Not Registered? <a href=#>Register</a></p>
+        </form>
     </body>
 </html>
