--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
     <head>
         <title>My Diary</title>
         <link rel='stylesheet' href="style.css"/>
+        <img src="image/logo.png">
     </head>
-    <body style="bgcolor:green">
-            <img class="image-logo" src="image/logo.png" alt="my logo">
+    <body>
+            
         <h1>SIGN UP</h1>
         <form action="login.html">
         <p>
