--- a/login.html
+++ b/login.html
@@ -1,18 +1,19 @@
 <html>
     <head>
         <title>My Diary Sign In</title>
+        <link rel="stylesheet" href="login.css">
         <style>
-            body {
-    background-image: url(image/logo.png);
-    height: 100vh;
-    background-size: cover;
-    background-position: center;
-            }
-            </style>
+                body {
+        background-image: url(image/logo.png);
+        height: 100vh;
+        background-size: cover;
+        background-position: center;
+                }
+    </style>
     </head>
     <body>
         <h1>SIGN IN</h1>
-        <form action="my diary.html">
+        <form action="home.html">
         <p>
             <label for="username">
             Username
