--- a/my diary.html
+++ b/my diary.html
@@ -2,15 +2,8 @@
     <head>
         <title></title>
         <link rel="stylesheet" href="diary.css">
-        <style>
-                body {
-        background-image: url(image/logo.png);
-        height: 100vh;
-        background-size: cover;
-        background-position: center;
-                }
-    </style>
-        <body bgcolor= #green>
+    
+        <body>
             <h1><i>MY DIARY</i></h1>
 
             <form action="view.html"
